# next-gen-ide

./: .gitignore  README.md
next-gen-ide/: package-lock.json  package.json
next-gen-ide/src/: App.tsx  index.css
next-gen-ide/src-tauri/: Cargo.toml  tauri.conf.json
next-gen-ide/src/components/editor/: CodeMirrorEditor.tsx  Editor.tsx
next-gen-ide/src/components/layout/: MainLayout.tsx
next-gen-ide/src/components/sidebar/: FileExplorer.tsx  Sidebar.tsx
next-gen-ide/src/components/statusbar/: Statusbar.tsx
next-gen-ide/src/components/terminal/: Terminal.tsx
next-gen-ide/src/components/toolbar/: Toolbar.tsx
next-gen-ide/src/context/: IdeContext.tsx
next-gen-ide/src/hooks/: useCodeMirror.ts
next-gen-ide/src/plugins/: PluginManager.ts  types.ts
next-gen-ide/src/plugins/explorer/: FileExplorerPlugin.ts
next-gen-ide/src/plugins/formatter/: FormatterPlugin.ts
next-gen-ide/src/plugins/html/: HtmlPlugin.ts
next-gen-ide/src/plugins/python/: PythonPlugin.ts
next-gen-ide/src/plugins/terminal/: TerminalPlugin.ts
next-gen-ide/src/plugins/typescript/: TypeScriptPlugin.ts
next-gen-ide/src/services/: EditorService.ts  FileSystemService.ts  WorkspaceService.ts
